# magma-agent

./: .gitignore  Dockerfile  LICENSE  README.md  config.json  config_commander.json  pyproject.toml  requirements.txt
scripts/: launch_agent.bash
src/magma_agent/: app.py  cli.py  config.py  load.py  registry.py
src/magma_agent/clients/: base.py
src/magma_agent/clients/commander/: __init__.py  base.py  gpt_model.py  history.py  loader.py  magma_model.py  messages.py  qwen_model.py  smolLLM_model.py
src/magma_agent/clients/dispatcher/: __init__.py  base.py  loader.py  magma_dispatcher.py  messages.py  parsing.py  qwen_model.py
src/magma_agent/clients/memorizer/: __init__.py  base.py  magma_memorizer.py
src/magma_agent/clients/tsm/: __init__.py  base.py  loader.py  magma_tsm.py
src/magma_agent/default_chat_template/: dispatcher.jinja  single-agent.jinja  tsm.jinja
src/magma_agent/messages/: __init__.py  commander.py  memorizer.py  tsm.py
